--- a/index.html
+++ b/index.html
@@ -3,396 +3,304 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Microtech IT Service — Trusted Microsoft, Antivirus & Printer Support</title>
-  <meta name="description" content="Microtech IT Service offers expert technical support for Microsoft products, antivirus installation, and printer troubleshooting. 24/7 professional IT help." />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <title>Microtech IT Service — Trusted Microsoft & IT Support</title>
+  <meta name="description" content="Microtech IT Service offers expert IT support, Microsoft assistance, cloud solutions, antivirus setup, networking, and web design for homes and businesses." />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    :root {
-      --primary: #0067b8;
-      --dark-blue: #004c8c;
-      --light-blue: #f3f9ff;
-      --gray: #f7f7f7;
-      --text-dark: #222;
-      --text-light: #555;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Segoe UI", "Poppins", sans-serif;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      background: #fff;
-      color: var(--text-dark);
-      overflow-x: hidden;
+      font-family: "Segoe UI", "Poppins", sans-serif;
+      color: #222;
+      background: #f7f9fc;
     }
-
-    a { text-decoration: none; color: inherit; }
-
-    /* HEADER */
     header {
-      background-color: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      padding: 15px 6%;
+      background: #fff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
+      padding: 15px 6%;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       position: sticky;
       top: 0;
-      z-index: 999;
+      z-index: 100;
     }
-
     .logo {
       display: flex;
       align-items: center;
       gap: 10px;
     }
-
     .logo img {
       width: 40px;
     }
-
-    .logo h2 {
-      color: var(--primary);
+    .logo h1 {
+      color: #0067b8;
       font-size: 1.5rem;
-      font-weight: 600;
+      font-weight: 700;
     }
-
-    .tollfree {
-      background: var(--primary);
-      color: #fff;
-      padding: 10px 20px;
-      border-radius: 20px;
-      font-weight: 600;
-      transition: 0.3s;
-    }
-
-    .tollfree:hover { background: var(--dark-blue); }
-
-    nav {
-      background: var(--light-blue);
-      text-align: center;
-      padding: 10px;
-    }
-
     nav a {
+      color: #333;
+      text-decoration: none;
       margin: 0 15px;
       font-weight: 500;
-      color: var(--dark-blue);
       transition: 0.3s;
     }
-
-    nav a:hover { color: var(--primary); }
-
-    /* HERO SECTION */
-    .hero {
-      background: linear-gradient(135deg, #0078d4 0%, #005a9e 100%);
-      color: white;
-      text-align: center;
-      padding: 120px 6%;
+    nav a:hover {
+      color: #0067b8;
     }
+    .tollfree {
+      background: #0067b8;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .tollfree:hover { background: #004c8c; }
 
-    .hero h1 {
-      font-size: 2.8rem;
-      font-weight: 700;
+    /* Hero Section */
+    .hero {
+      background: linear-gradient(120deg, #e6f0ff, #ffffff);
+      padding: 80px 8%;
+      text-align: center;
+    }
+    .hero h2 {
+      color: #0067b8;
+      font-size: 2.5rem;
       margin-bottom: 15px;
     }
-
     .hero p {
-      font-size: 1.15rem;
-      opacity: 0.95;
-      margin-bottom: 25px;
+      font-size: 1.2rem;
+      color: #444;
+      margin-bottom: 30px;
     }
-
     .hero a {
-      background: #fff;
-      color: var(--primary);
-      padding: 12px 32px;
-      border-radius: 25px;
-      font-weight: 600;
-      transition: 0.3s;
-    }
-
-    .hero a:hover {
-      background: var(--dark-blue);
+      background: #0067b8;
       color: #fff;
+      padding: 12px 30px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .hero a:hover {
+      background: #004c8c;
     }
 
-    /* COMMON SECTION STYLE */
-    section {
-      padding: 80px 8%;
+    /* About Section */
+    .about {
+      padding: 70px 8%;
+      text-align: center;
+      background: #fff;
+    }
+    .about h3 {
+      color: #0067b8;
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .about p {
+      color: #444;
+      line-height: 1.8;
+      max-width: 900px;
+      margin: auto;
+      font-size: 1.1rem;
     }
 
-    section h2 {
+    /* Services */
+    .services {
+      padding: 80px 6%;
+      background: #f2f6fb;
+    }
+    .services h3 {
       text-align: center;
       font-size: 2rem;
-      color: var(--primary);
-      margin-bottom: 10px;
+      color: #0067b8;
+      margin-bottom: 40px;
     }
-
-    section p.section-intro {
-      text-align: center;
-      color: var(--text-light);
-      margin-bottom: 50px;
-      font-size: 1.05rem;
-    }
-
-    /* ABOUT SECTION */
-    .about {
+    .service-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 40px;
-      align-items: center;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
     }
-
-    .about img {
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    }
-
-    .about-text h3 {
-      color: var(--dark-blue);
-      font-size: 1.5rem;
-      margin-bottom: 15px;
-    }
-
-    .about-text p {
-      color: var(--text-light);
-      margin-bottom: 20px;
-      line-height: 1.6;
-    }
-
-    /* SERVICES */
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
     .service-card {
       background: #fff;
-      border: 1px solid #e0e6ee;
-      border-radius: 10px;
-      padding: 40px 25px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-      transition: 0.3s;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+      padding: 30px;
       text-align: center;
+      transition: all 0.3s ease;
     }
-
     .service-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
     }
-
     .service-card i {
-      font-size: 2.5rem;
-      color: var(--primary);
+      font-size: 2.2rem;
+      color: #0067b8;
       margin-bottom: 15px;
     }
-
-    .service-card h3 {
+    .service-card h4 {
+      color: #004c8c;
+      margin-bottom: 10px;
       font-size: 1.2rem;
-      margin-bottom: 10px;
-      color: var(--dark-blue);
     }
-
     .service-card p {
-      color: var(--text-light);
+      color: #555;
       font-size: 0.95rem;
+      line-height: 1.5;
     }
-
-    /* PRODUCTS SECTION */
-    .products {
-      background: var(--gray);
-      text-align: center;
-    }
-
-    .product-grid {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-top: 40px;
-    }
-
-    .product {
-      background: #fff;
-      border-radius: 10px;
-      padding: 20px 30px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.05);
-      width: 200px;
-    }
-
-    .product img {
-      width: 70px;
-      height: 70px;
-      margin-bottom: 10px;
-    }
-
-    .product p {
-      color: var(--text-dark);
+    .service-card a {
+      display: inline-block;
+      margin-top: 10px;
+      color: #0067b8;
       font-weight: 600;
+      text-decoration: none;
     }
 
-    /* CONTACT SECTION */
+    /* Contact */
     .contact {
-      background: var(--light-blue);
+      padding: 80px 8%;
       text-align: center;
-      padding: 80px 5%;
+      background: #fff;
     }
-
-    .contact h2 {
-      color: var(--dark-blue);
-      margin-bottom: 15px;
-    }
-
-    .contact p {
+    .contact h3 {
+      color: #0067b8;
+      font-size: 2rem;
       margin-bottom: 20px;
-      color: var(--text-light);
     }
-
+    .contact p {
+      color: #444;
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+    }
     .contact a {
-      background: var(--primary);
+      background: #0067b8;
       color: #fff;
-      padding: 12px 28px;
+      padding: 12px 25px;
       border-radius: 25px;
+      text-decoration: none;
       font-weight: 600;
-      transition: 0.3s;
     }
+    .contact a:hover { background: #004c8c; }
 
-    .contact a:hover { background: var(--dark-blue); }
-
-    /* FOOTER */
+    /* Footer */
     footer {
-      background: var(--dark-blue);
+      background: #004c8c;
       color: #fff;
       text-align: center;
       padding: 40px 5% 25px;
     }
-
     footer a {
       color: #fff;
-      margin: 0 10px;
       text-decoration: underline;
-      font-size: 0.95rem;
+      margin: 0 10px;
     }
-
     footer p {
-      margin-top: 15px;
       font-size: 0.9rem;
       opacity: 0.8;
+      margin-top: 10px;
     }
 
     @media (max-width: 768px) {
-      header { flex-direction: column; text-align: center; }
-      .tollfree { margin-top: 10px; }
-      .hero h1 { font-size: 2rem; }
+      .hero h2 { font-size: 1.8rem; }
+      .about h3, .services h3, .contact h3 { font-size: 1.6rem; }
     }
   </style>
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Logo">
-      <h2>Microtech IT Service</h2>
-    </div>
-    <a href="tel:+18886497907" class="tollfree"><i class="fa-solid fa-phone"></i> (888) 649-7907</a>
-  </header>
-
+<header>
+  <div class="logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Logo" />
+    <h1>Microtech IT Service</h1>
+  </div>
   <nav>
     <a href="#home">Home</a>
-    <a href="#about">About Us</a>
+    <a href="#about">About</a>
     <a href="#services">Services</a>
-    <a href="#products">Products</a>
     <a href="#contact">Contact</a>
   </nav>
+  <a href="tel:+18886497907" class="tollfree"><i class="fa-solid fa-phone"></i> (888) 649-7907</a>
+</header>
 
-  <!-- HERO -->
-  <section class="hero" id="home">
-    <h1>Reliable IT Support for Every Need</h1>
-    <p>Certified technicians offering expert solutions for Microsoft software, antivirus protection, and printer troubleshooting — available 24/7.</p>
-    <a href="tel:+18886497907">Call Now</a>
-  </section>
+<section class="hero" id="home">
+  <h2>Professional IT Support & Microsoft Services</h2>
+  <p>Your trusted partner for technology solutions, remote help, and business-grade IT support.</p>
+  <a href="#services">Explore Services</a>
+</section>
 
-  <!-- ABOUT US -->
-  <section id="about">
-    <h2>About Us</h2>
-    <p class="section-intro">Delivering trustworthy IT support services with a focus on customer satisfaction and efficiency.</p>
-    <div class="about">
-      <img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e?auto=format&fit=crop&w=800&q=80" alt="Tech Team">
-      <div class="about-text">
-        <h3>Your Technology Partner</h3>
-        <p>Microtech IT Service is a professional tech support company providing expert solutions for Microsoft products, antivirus software, and printing devices. Our mission is to simplify your digital experience with quick, reliable, and transparent support.</p>
-        <p>We specialize in assisting individuals and businesses alike, ensuring optimal performance, security, and productivity across all devices and platforms.</p>
-      </div>
+<section class="about" id="about">
+  <h3>About Us</h3>
+  <p>Microtech IT Service is a trusted name in comprehensive IT support and managed technology solutions. From troubleshooting Microsoft products to setting up cloud systems, we offer reliable tech services for individuals and businesses alike. Our certified experts ensure seamless operation, security, and performance of your digital ecosystem.</p>
+</section>
+
+<section class="services" id="services">
+  <h3>Our Core IT Services</h3>
+  <div class="service-grid">
+    <div class="service-card">
+      <i class="fa-solid fa-cloud"></i>
+      <h4>Cloud Computing</h4>
+      <p>Secure cloud migration, setup, and management for Azure, AWS, and Google Cloud.</p>
+      <a href="services/cloud.html">Learn More →</a>
     </div>
-  </section>
-
-  <!-- SERVICES -->
-  <section id="services">
-    <h2>Our Services</h2>
-    <p class="section-intro">Comprehensive support for your home and business IT infrastructure.</p>
-    <div class="services">
-      <div class="service-card">
-        <i class="fa-brands fa-windows"></i>
-        <h3>Microsoft Support</h3>
-        <p>Expert help for Microsoft Windows, Office Suite, Outlook configuration, and software troubleshooting.</p>
-      </div>
-      <div class="service-card">
-        <i class="fa-solid fa-shield-virus"></i>
-        <h3>Antivirus Assistance</h3>
-        <p>Installation, renewal, and virus removal services for all leading antivirus programs like Norton, McAfee, and Bitdefender.</p>
-      </div>
-      <div class="service-card">
-        <i class="fa-solid fa-print"></i>
-        <h3>Printer Setup & Repair</h3>
-        <p>Resolve driver issues, connectivity problems, and device errors for HP, Epson, and Canon printers.</p>
-      </div>
-      <div class="service-card">
-        <i class="fa-solid fa-network-wired"></i>
-        <h3>Network & Connectivity</h3>
-        <p>Wi-Fi setup, router configuration, and network diagnostics for seamless and secure connections.</p>
-      </div>
+    <div class="service-card">
+      <i class="fa-solid fa-network-wired"></i>
+      <h4>Networking Services</h4>
+      <p>LAN/WAN setup, router configuration, Wi-Fi optimization, and remote monitoring.</p>
+      <a href="services/networking.html">Learn More →</a>
     </div>
-  </section>
-
-  <!-- PRODUCTS -->
-  <section id="products" class="products">
-    <h2>Products We Support</h2>
-    <p class="section-intro">We provide assistance for a wide range of trusted technology brands.</p>
-    <div class="product-grid">
-      <div class="product"><img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg"><p>Microsoft</p></div>
-      <div class="product"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Norton_Antivirus_logo.svg"><p>Norton</p></div>
-      <div class="product"><img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/McAfee_logo.svg"><p>McAfee</p></div>
-      <div class="product"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/HP_logo_2012.svg"><p>HP Printers</p></div>
-      <div class="product"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Epson_logo.svg"><p>Epson</p></div>
-      <div class="product"><img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Canon_logo.svg"><p>Canon</p></div>
+    <div class="service-card">
+      <i class="fa-solid fa-desktop"></i>
+      <h4>Microsoft & Windows Support</h4>
+      <p>Fix activation errors, system crashes, and software compatibility issues.</p>
+      <a href="services/microsoft.html">Learn More →</a>
     </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="contact">
-    <h2>Contact Our Experts</h2>
-    <p>Call our toll-free number or connect with our team for prompt support and expert guidance.</p>
-    <a href="tel:+18886497907"><i class="fa-solid fa-phone"></i> (888) 649-7907</a>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <div>
-      <a href="#disclaimer">Disclaimer</a> |
-      <a href="#privacy">Privacy Policy</a> |
-      <a href="#terms">Terms & Conditions</a>
+    <div class="service-card">
+      <i class="fa-solid fa-shield-halved"></i>
+      <h4>Antivirus & Security</h4>
+      <p>Protect your devices with industry-leading antivirus installation and malware removal.</p>
+      <a href="services/security.html">Learn More →</a>
     </div>
-    <p>© 2025 Microtech IT Service. All Rights Reserved.</p>
-    <p id="disclaimer">Disclaimer: Microtech IT Service is an independent IT service provider and is not affiliated with Microsoft or any third-party brand. All trademarks are property of their respective owners.</p>
-  </footer>
+    <div class="service-card">
+      <i class="fa-solid fa-server"></i>
+      <h4>Data Backup & Recovery</h4>
+      <p>Prevent data loss with secure cloud backup and fast recovery options.</p>
+      <a href="services/backup.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-globe"></i>
+      <h4>Web Design & Development</h4>
+      <p>Custom websites built with performance, security, and professional appeal.</p>
+      <a href="services/web.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-print"></i>
+      <h4>Printer & Hardware Support</h4>
+      <p>Printer setup, connectivity troubleshooting, and driver updates for all brands.</p>
+      <a href="services/printer.html">Learn More →</a>
+    </div>
+    <div class="service-card">
+      <i class="fa-solid fa-headset"></i>
+      <h4>Remote IT Helpdesk</h4>
+      <p>24/7 expert remote assistance for all your IT and software problems.</p>
+      <a href="services/remote.html">Learn More →</a>
+    </div>
+  </div>
+</section>
+
+<section class="contact" id="contact">
+  <h3>Contact Us</h3>
+  <p>Need immediate IT help? Speak directly with a certified support agent today.</p>
+  <a href="tel:+18886497907"><i class="fa-solid fa-phone"></i> Call (888) 649-7907</a>
+</section>
+
+<footer>
+  <div>
+    <a href="privacy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a> |
+    <a href="disclaimer.html">Disclaimer</a> |
+    <a href="#home">Home</a>
+  </div>
+  <p>© 2025 Microtech IT Service. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
