--- a/index.html
+++ b/index.html
@@ -3,374 +3,147 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Microtech IT Service — Trusted Microsoft & IT Support Solutions</title>
-  <meta name="description" content="Microtech IT Service provides certified IT support, Microsoft solutions, cloud management, web design, cybersecurity, and remote tech assistance for individuals and businesses." />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <title>Microtech IT Service — Official Microsoft & IT Support Partner</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: "Segoe UI", "Poppins", sans-serif;
-      color: #222;
-      background: #f7f9fc;
-      scroll-behavior: smooth;
-    }
-    header {
-      background: #fff;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 6%;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-    .logo {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .logo img { width: 38px; }
-    .logo h1 {
-      color: #0067b8;
-      font-size: 1.5rem;
-      font-weight: 700;
-    }
-    nav a {
-      color: #333;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-    nav a:hover { color: #0067b8; }
-    .tollfree {
-      background: #0067b8;
-      color: #fff;
-      padding: 10px 20px;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    .tollfree:hover { background: #004c8c; }
+    body {font-family: 'Segoe UI', Arial, sans-serif; margin:0; background:#f8f9fa; color:#333;}
+    header {background:#0078d7; color:white; padding:15px 40px; display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap;}
+    header h1 {margin:0; font-size:24px; display:flex; align-items:center;}
+    header img {height:40px; margin-right:10px;}
+    header .tollfree {font-weight:bold;}
+    nav a {color:white; text-decoration:none; margin:0 15px; font-weight:500;}
+    nav a:hover {text-decoration:underline;}
 
-    /* Hero Section */
-    .hero {
-      background: linear-gradient(120deg, #e8f1ff, #ffffff);
-      padding: 100px 8%;
-      text-align: center;
-    }
-    .hero h2 {
-      color: #004c8c;
-      font-size: 2.8rem;
-      margin-bottom: 15px;
-      font-weight: 700;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      color: #555;
-      margin-bottom: 35px;
-    }
-    .hero a {
-      background: #0067b8;
-      color: #fff;
-      padding: 12px 30px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: 0.3s;
-    }
-    .hero a:hover { background: #004c8c; }
-
-    /* Stats Section */
-    .stats {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      background: #0067b8;
-      color: #fff;
-      text-align: center;
-      padding: 60px 6%;
-    }
-    .stat {
-      flex: 1 1 250px;
-      margin: 20px;
-    }
-    .stat i {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    .stat h4 {
-      font-size: 2rem;
-      margin: 10px 0;
+    .hero {background:#eaf3ff; text-align:center; padding:60px 20px;}
+    .hero h2 {font-size:32px; margin-bottom:15px;}
+    .hero p {font-size:18px; color:#555;}
+    .brand-slider {display:flex; overflow:hidden; animation:slide 20s linear infinite; justify-content:center; align-items:center; margin-top:30px;}
+    .brand-slider img {height:60px; margin:0 40px; filter:grayscale(100%);}
+    @keyframes slide {
+      0% {transform:translateX(0);}
+      100% {transform:translateX(-50%);}
     }
 
-    /* About Section */
-    .about {
-      padding: 80px 8%;
-      background: #fff;
-      text-align: center;
-    }
-    .about h3 {
-      color: #0067b8;
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-    .about p {
-      color: #444;
-      max-width: 900px;
-      margin: auto;
-      line-height: 1.8;
-      font-size: 1.1rem;
-    }
+    .stats {display:flex; flex-wrap:wrap; justify-content:center; background:#fff; padding:40px 0;}
+    .stat-box {flex:1 1 200px; text-align:center; margin:10px;}
+    .stat-box h3 {font-size:28px; color:#0078d7;}
+    .stat-box p {font-weight:500;}
 
-    /* Services Section */
-    .services {
-      padding: 80px 6%;
-      background: #f3f7fc;
-    }
-    .services h3 {
-      text-align: center;
-      font-size: 2rem;
-      color: #0067b8;
-      margin-bottom: 50px;
-    }
-    .service-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 25px;
-    }
-    .service-card {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
-      padding: 30px;
-      text-align: center;
-      transition: 0.3s ease;
-    }
-    .service-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 18px rgba(0,0,0,0.1);
-    }
-    .service-card i {
-      font-size: 2.2rem;
-      color: #0067b8;
-      margin-bottom: 15px;
-    }
-    .service-card h4 {
-      color: #004c8c;
-      margin-bottom: 10px;
-      font-size: 1.2rem;
-      font-weight: 600;
-    }
+    .about, .services, .faq, .testimonials {padding:60px 20px; background:white; margin:20px auto; max-width:1200px; border-radius:12px; box-shadow:0 0 10px rgba(0,0,0,0.05);}
+    .about h2, .services h2, .faq h2, .testimonials h2 {text-align:center; color:#0078d7; margin-bottom:30px;}
 
-    /* Testimonials Section */
-    .testimonials {
-      background: #fff;
-      padding: 80px 8%;
-    }
-    .testimonials h3 {
-      text-align: center;
-      color: #0067b8;
-      font-size: 2rem;
-      margin-bottom: 40px;
-    }
-    .testimonial-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 25px;
-    }
-    .testimonial {
-      background: #f3f7fc;
-      border-left: 4px solid #0067b8;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    }
-    .testimonial p {
-      color: #333;
-      font-style: italic;
-      margin-bottom: 15px;
-      line-height: 1.6;
-    }
-    .testimonial h4 {
-      color: #004c8c;
-      font-weight: 600;
-    }
-    .testimonial span {
-      color: #777;
-      font-size: 0.9rem;
-    }
+    .about p {max-width:800px; margin:0 auto; text-align:center; line-height:1.6;}
 
-    /* Contact Section */
-    .contact {
-      padding: 80px 8%;
-      background: #fff;
-      text-align: center;
-    }
-    .contact h3 {
-      color: #0067b8;
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
+    .service-grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(220px,1fr)); gap:20px; margin-top:30px;}
+    .service {background:#f2f6ff; border-radius:10px; padding:20px; text-align:center; transition:0.3s;}
+    .service:hover {background:#0078d7; color:white; transform:translateY(-5px);}
+    .service i {font-size:40px; margin-bottom:10px;}
 
-    /* Footer */
-    footer {
-      background: #004c8c;
-      color: #fff;
-      text-align: center;
-      padding: 40px 5% 25px;
-    }
-    footer a {
-      color: #fff;
-      text-decoration: underline;
-      margin: 0 10px;
-    }
-    footer p {
-      font-size: 0.9rem;
-      opacity: 0.9;
-      margin-top: 10px;
-      line-height: 1.6;
-    }
+    .faq-item {margin-bottom:15px; border-bottom:1px solid #ddd; padding-bottom:10px;}
+    .faq-item summary {font-weight:bold; cursor:pointer; color:#0078d7;}
+    .faq-item p {margin:10px 0 0 0; color:#555;}
 
-    @media (max-width: 768px) {
-      .hero h2 { font-size: 2rem; }
-      .about h3, .services h3, .contact h3 { font-size: 1.6rem; }
-    }
+    .testimonials-grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px; margin-top:30px;}
+    .testimonial {background:#f9f9f9; border-radius:10px; padding:20px; text-align:center; box-shadow:0 0 5px rgba(0,0,0,0.05);}
+    .testimonial p {font-style:italic; color:#555;}
+    .testimonial h4 {margin-top:10px; color:#0078d7;}
+
+    footer {background:#0d1b2a; color:white; text-align:center; padding:30px 20px;}
+    footer a {color:#aad4ff; margin:0 10px; text-decoration:none;}
+    footer a:hover {text-decoration:underline;}
+    footer .disclaimer {margin-top:20px; font-size:13px; color:#ccc;}
   </style>
 </head>
 <body>
 
 <header>
-  <div class="logo">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Logo" />
-    <h1>Microtech IT Service</h1>
-  </div>
+  <h1><img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Microsoft_logo.svg" alt="Logo"> Microtech IT Service</h1>
+  <div class="tollfree">📞 Toll Free: (888) 649-7907</div>
   <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#testimonials">Testimonials</a>
-    <a href="#contact">Contact</a>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+    <a href="#">Products</a>
   </nav>
-  <a href="tel:+18886497907" class="tollfree"><i class="fa-solid fa-phone"></i> (888) 649-7907</a>
 </header>
 
-<section class="hero" id="home">
-  <h2>Your Trusted Partner for Microsoft & IT Solutions</h2>
-  <p>Empowering businesses and individuals with expert support, reliable technology, and 24/7 assistance.</p>
-  <a href="#services">Explore Our Services</a>
+<section class="hero">
+  <h2>Your Trusted Microsoft & IT Support Partner</h2>
+  <p>Providing expert help for Microsoft, Windows, Antivirus, Networking, and Printer Issues 24/7</p>
+  <div class="brand-slider">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Microsoft_logo.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/HP_logo_2012.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Dell_logo_2016.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Canon_logo_vector.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Norton_logo_2021.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Adobe_Corporate_logo.svg">
+  </div>
 </section>
 
 <section class="stats">
-  <div class="stat">
-    <i class="fa-solid fa-users"></i>
-    <h4>50K+</h4>
+  <div class="stat-box">
+    <h3>98K+</h3>
     <p>Happy Customers Worldwide</p>
   </div>
-  <div class="stat">
-    <i class="fa-solid fa-plug"></i>
-    <h4>120K+</h4>
-    <p>Connected Users with Us</p>
+  <div class="stat-box">
+    <h3>450K+</h3>
+    <p>Connected Users</p>
   </div>
-  <div class="stat">
-    <i class="fa-solid fa-screwdriver-wrench"></i>
-    <h4>500K+</h4>
-    <p>Technical Issues Resolved</p>
+  <div class="stat-box">
+    <h3>1.2M+</h3>
+    <p>Issues Resolved</p>
   </div>
 </section>
 
-<section class="about" id="about">
-  <h3>About Microtech IT Service</h3>
-  <p>Microtech IT Service provides end-to-end IT support and technology management for businesses of all sizes. We specialize in Microsoft products, antivirus protection, cloud solutions, and network infrastructure. Our mission is to deliver reliable, affordable, and secure IT solutions that drive business success and personal convenience.</p>
+<section class="about">
+  <h2>About Us</h2>
+  <p>Microtech IT Service is a leading independent tech support provider offering assistance for Microsoft products, antivirus setup, printer configuration, networking, and cloud services. Our mission is to deliver seamless IT experiences to individuals and businesses worldwide.</p>
 </section>
 
-<section class="services" id="services">
-  <h3>Our Professional IT Solutions</h3>
+<section class="services">
+  <h2>Our Services</h2>
   <div class="service-grid">
-    <div class="service-card">
-      <i class="fa-solid fa-cloud"></i>
-      <h4>Cloud Computing</h4>
-      <p>Migration, setup, and management of Microsoft Azure, AWS, and Google Cloud environments.</p>
-    </div>
-    <div class="service-card">
-      <i class="fa-solid fa-network-wired"></i>
-      <h4>Networking Services</h4>
-      <p>Router configuration, LAN/WAN optimization, and secure enterprise connectivity.</p>
-    </div>
-    <div class="service-card">
-      <i class="fa-solid fa-globe"></i>
-      <h4>Web Design & Development</h4>
-      <p>Responsive and secure business websites built for performance and brand presence.</p>
-    </div>
-    <div class="service-card">
-      <i class="fa-solid fa-user-shield"></i>
-      <h4>Cybersecurity</h4>
-      <p>Endpoint protection, malware defense, and proactive monitoring for system safety.</p>
-    </div>
-    <div class="service-card">
-      <i class="fa-solid fa-database"></i>
-      <h4>Data Backup & Recovery</h4>
-      <p>Reliable cloud backup, disaster recovery, and quick restore solutions for all platforms.</p>
-    </div>
-    <div class="service-card">
-      <i class="fa-solid fa-laptop-code"></i>
-      <h4>Microsoft Product Support</h4>
-      <p>Fix issues in Windows, Office, Outlook, and Microsoft 365 with certified professionals.</p>
-    </div>
+    <a class="service" href="#"><i class="fa-solid fa-cloud"></i><h3>Cloud Computing</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-network-wired"></i><h3>Networking Solutions</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-desktop"></i><h3>Microsoft & Windows Support</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-shield-halved"></i><h3>Antivirus Installation</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-print"></i><h3>Printer & Scanner Setup</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-globe"></i><h3>Web Design & Development</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-database"></i><h3>Data Backup & Recovery</h3></a>
+    <a class="service" href="#"><i class="fa-solid fa-user-shield"></i><h3>Cybersecurity Services</h3></a>
   </div>
 </section>
 
-<section class="testimonials" id="testimonials">
-  <h3>What Our Clients Say</h3>
-  <div class="testimonial-grid">
-    <div class="testimonial">
-      <p>“Microtech IT Service resolved my Microsoft Outlook issue in just minutes. Excellent support!”</p>
-      <h4>Sarah Johnson</h4>
-      <span>Business Owner, NY</span>
-    </div>
-    <div class="testimonial">
-      <p>“Their remote desktop help was quick and safe. My system performance improved drastically.”</p>
-      <h4>Michael Lee</h4>
-      <span>Software Engineer, CA</span>
-    </div>
-    <div class="testimonial">
-      <p>“Amazing customer service! They handled my printer and driver setup professionally.”</p>
-      <h4>Rachel Adams</h4>
-      <span>Marketing Specialist, TX</span>
-    </div>
-    <div class="testimonial">
-      <p>“Trustworthy and efficient. They helped migrate our business data securely to Azure.”</p>
-      <h4>David Brown</h4>
-      <span>IT Director, WA</span>
-    </div>
-    <div class="testimonial">
-      <p>“The Microtech team is always available. 24/7 support really means 24/7!”</p>
-      <h4>Emma Williams</h4>
-      <span>Freelancer, FL</span>
-    </div>
-    <div class="testimonial">
-      <p>“Highly recommend! Great experience with Windows installation and virus cleanup.”</p>
-      <h4>Robert Miller</h4>
-      <span>Consultant, NV</span>
-    </div>
-  </div>
+<section class="faq">
+  <h2>Frequently Asked Questions</h2>
+  <div class="faq-item"><summary>How do I contact Microtech IT support?</summary><p>You can reach us 24/7 at our toll-free number or via the contact page form.</p></div>
+  <div class="faq-item"><summary>Do you provide remote assistance?</summary><p>Yes, our experts can securely connect remotely to resolve your issues instantly.</p></div>
+  <div class="faq-item"><summary>Are your services officially affiliated with Microsoft?</summary><p>We are an independent IT service provider and not affiliated with Microsoft or any third-party brands.</p></div>
+  <div class="faq-item"><summary>What payment options do you accept?</summary><p>We accept all major credit cards and secure online payment methods.</p></div>
 </section>
 
-<section class="contact" id="contact">
-  <h3>Get in Touch</h3>
-  <p>Need IT assistance or want to discuss enterprise support plans? Connect with our experts now.</p>
-  <a href="tel:+18886497907"><i class="fa-solid fa-phone"></i> Call (888) 649-7907</a>
+<section class="testimonials">
+  <h2>What Our Customers Say</h2>
+  <div class="testimonials-grid">
+    <div class="testimonial"><p>“Amazing service! Fixed my Windows issue in minutes.”</p><h4>- Sarah M.</h4></div>
+    <div class="testimonial"><p>“Professional and friendly team. Highly recommended.”</p><h4>- David R.</h4></div>
+    <div class="testimonial"><p>“They recovered my lost files safely. Thank you Microtech!”</p><h4>- Priya S.</h4></div>
+    <div class="testimonial"><p>“Best printer setup support I’ve ever experienced.”</p><h4>- James K.</h4></div>
+    <div class="testimonial"><p>“Affordable and reliable cloud migration help.”</p><h4>- Maria L.</h4></div>
+    <div class="testimonial"><p>“Quick antivirus installation and great after-support.”</p><h4>- Robert B.</h4></div>
+  </div>
 </section>
 
 <footer>
-  <div>
-    <a href="privacy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms & Conditions</a> |
-    <a href="disclaimer.html">Disclaimer</a> |
-    <a href="#home">Home</a>
+  <p>
+    <a href="#">Privacy Policy</a> | 
+    <a href="#">Terms & Conditions</a> | 
+    <a href="#">Disclaimer</a>
+  </p>
+  <div class="disclaimer">
+    Disclaimer: Microtech IT Service is an independent technical support provider. We are not affiliated with or endorsed by Microsoft, HP, Dell, or any other third-party brand. All trademarks and brand names are the property of their respective owners.
   </div>
-  <p><strong>Disclaimer:</strong> Microtech IT Service is an independent IT support company. We are not affiliated with Microsoft, HP, Dell, or any other brand mentioned on this site. Product names and trademarks are the property of their respective owners. Services provided are for general IT assistance purposes only.</p>
   <p>© 2025 Microtech IT Service. All Rights Reserved.</p>
 </footer>
 
