--- a/index.html
+++ b/index.html
@@ -202,26 +202,26 @@
       <div class="brand-strip" aria-hidden="false">
         <div class="brand-track" role="list">
           <!-- repeating block so animation feels continuous -->
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Microsoft_logo.svg" alt="Microsoft"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/HP_logo_2012.svg" alt="HP"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Dell_logo_2016.svg" alt="Dell"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Canon_logo_vector.svg" alt="Canon"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Epson_logo.svg" alt="Epson"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/McAfee_logo.svg" alt="McAfee"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Bitdefender_logo.svg" alt="Bitdefender"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Norton_logo_2021.svg" alt="Norton"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Adobe_Corporate_logo.svg" alt="Adobe"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Microsoft_logo_%282012%29.svg/1024px-Microsoft_logo_%282012%29.svg.png" alt="Microsoft"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/HP_logo_2012.svg/1200px-HP_logo_2012.svg.png" alt="HP"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Dell_Logo.png" alt="Dell"></div>
+          <div class="brand-item"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbXz6CXQoFLU_yfaT6Rv1GGY1b6EfutlERqA&s" alt="Canon"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Epson_logo.svg/2560px-Epson_logo.svg.png" alt="Epson"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/McAfee_logo.svg/2560px-McAfee_logo.svg.png" alt="McAfee"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Bitdefender_logo.svg/2560px-Bitdefender_logo.svg.png" alt="Bitdefender"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Norton-logo-2021.svg/2560px-Norton-logo-2021.svg.png" alt="Norton"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Adobe_Corporate_logo.svg/1200px-Adobe_Corporate_logo.svg.png" alt="Adobe"></div>
 
           <!-- repeat same block (helps continuous scroll) -->
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Microsoft_logo.svg" alt="Microsoft"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/HP_logo_2012.svg" alt="HP"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Dell_logo_2016.svg" alt="Dell"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Canon_logo_vector.svg" alt="Canon"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Epson_logo.svg" alt="Epson"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/McAfee_logo.svg" alt="McAfee"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Bitdefender_logo.svg" alt="Bitdefender"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Norton_logo_2021.svg" alt="Norton"></div>
-          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Adobe_Corporate_logo.svg" alt="Adobe"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Microsoft_logo_%282012%29.svg/1024px-Microsoft_logo_%282012%29.svg.png" alt="Microsoft"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/HP_logo_2012.svg/1200px-HP_logo_2012.svg.png" alt="HP"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Dell_Logo.png" alt="Dell"></div>
+          <div class="brand-item"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbXz6CXQoFLU_yfaT6Rv1GGY1b6EfutlERqA&s" alt="Canon"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Epson_logo.svg/2560px-Epson_logo.svg.png" alt="Epson"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/McAfee_logo.svg/2560px-McAfee_logo.svg.png" alt="McAfee"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Bitdefender_logo.svg/2560px-Bitdefender_logo.svg.png" alt="Bitdefender"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Norton-logo-2021.svg/2560px-Norton-logo-2021.svg.png" alt="Norton"></div>
+          <div class="brand-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Adobe_Corporate_logo.svg/1200px-Adobe_Corporate_logo.svg.png" alt="Adobe"></div>
         </div>
       </div>
     </div>
@@ -552,3 +552,4 @@
   </script>
 </body>
 </html>
+
